WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51403
Clicking missing plug-in text does not show a sheet
https://bugs.webkit.org/show_bug.cgi?id=51403
Summary
Clicking missing plug-in text does not show a sheet
Anders Carlsson
Reported
2010-12-21 09:29:32 PST
Clicking missing plug-in text does not show a sheet
Attachments
Patch
(15.20 KB, patch)
2010-12-21 09:55 PST
,
Anders Carlsson
sullivan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-12-21 09:55:16 PST
Created
attachment 77127
[details]
Patch
Early Warning System Bot
Comment 2
2010-12-21 10:09:39 PST
Attachment 77127
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/7302086
John Sullivan
Comment 3
2010-12-21 10:22:42 PST
Comment on
attachment 77127
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=77127&action=review
r+ assuming you've fixed the qt build.
> WebKit2/WebProcess/WebCoreSupport/WebChromeClient.cpp:398 > + // Page UI client.
This FIXME should include a bug number.
Anders Carlsson
Comment 4
2010-12-21 10:30:15 PST
Committed
r74418
: <
http://trac.webkit.org/changeset/74418
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug