Tools/WebKitTestRunner/TestController.cpp
@@ -122,6 +122,7 @@ static WKPageRef createOtherPage(WKPageRef oldPage, WKDictionaryRef, WKEventModi
         0, // runJavaScriptPrompt
         0, // setStatusText
         0, // mouseDidMoveOverElement
+        0, // missingPluginButtonClicked
         0, // didNotHandleKeyEvent
         0, // toolbarsAreVisible
         0, // setToolbarsAreVisible
@@ -225,6 +226,7 @@ void TestController::initialize(int argc, const char* argv[])
         0, // runJavaScriptPrompt
         0, // setStatusText
         0, // mouseDidMoveOverElement
+        0, // missingPluginButtonClicked
         0, // didNotHandleKeyEvent
         0, // toolbarsAreVisible
         0, // setToolbarsAreVisible
